add new website from server na

--- a/xem-phim-bo/lieu-chu-ky/index.html
+++ b/xem-phim-bo/lieu-chu-ky/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             10
             </dd>
             <br/>
            </dl>
@@ -1578,28 +1578,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1612,6 +1590,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1657,18 +1657,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-sat-dien-loan" title="Cảnh Sát Điên Loạn">
+          <a class="list-top-movie-link" href="/phim-moi/svaha-ngon-tay-thu-sau" title="Svaha: Ngón tay thứ sáu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-dien-loan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/svaha-ngon-tay-thu-sau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cảnh Sát Điên Loạn
+             Svaha: Ngón tay thứ sáu
             </span>
             <span class="list-top-movie-item-en">
-             Maniac Cop
+             Svaha: The Sixth Finger
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tieu-thu-d-khong-de-choc" title="Tiểu Thư D Không Dễ Chọc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieu-thu-d-khong-de-choc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tiểu Thư D Không Dễ Chọc
+            </span>
+            <span class="list-top-movie-item-en">
+             Great MissD
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1679,21 +1701,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cach-huy-hoai-giang-sinh-phan-2" title="Cách hủy hoại Giáng sinh (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/tim-tinh-yeu-trong-thoi-hien-dai" title="Tìm tình yêu trong thời hiện đại">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cach-huy-hoai-giang-sinh-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tim-tinh-yeu-trong-thoi-hien-dai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cách hủy hoại Giáng sinh (Phần 2)
+             Tìm tình yêu trong thời hiện đại
             </span>
             <span class="list-top-movie-item-en">
-             How to Ruin Christmas (Season 2)
+             Find Love in Modern Times
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1701,21 +1723,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuu-mon-ngoai-truyen-hang-ha-sat-thu" title="Cửu Môn ngoại truyện: Hằng hà sát thụ">
+          <a class="list-top-movie-link" href="/phim-moi/giang-long-than-chuong-to-khat-nhi" title="Giáng Long Thần Chưởng Tô Khất Nhi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuu-mon-ngoai-truyen-hang-ha-sat-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-long-than-chuong-to-khat-nhi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cửu Môn ngoại truyện: Hằng hà sát thụ
+             Giáng Long Thần Chưởng Tô Khất Nhi
             </span>
             <span class="list-top-movie-item-en">
-             The Mystic Nine Side Story: Ganges Killing the Trees
+             Su Can: Master of Dragon-strike Palms
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1723,40 +1745,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-nang-lo-lem-dieu-uoc-giang-sinh" title="Chuyện nàng Lọ Lem: Điều ước Giáng Sinh">
+          <a class="list-top-movie-link" href="/phim-moi/vu-dieu-tinh-yeu-3" title="Vũ Điệu Tình Yêu 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-nang-lo-lem-dieu-uoc-giang-sinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-dieu-tinh-yeu-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyện nàng Lọ Lem: Điều ước Giáng Sinh
+             Vũ Điệu Tình Yêu 3
             </span>
             <span class="list-top-movie-item-en">
-             A Cinderella Story: Christmas Wish
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sita-sings-the-blues" title="Sita Sings the Blues">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sita-sings-the-blues-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sita Sings the Blues
-            </span>
-            <span class="list-top-movie-item-en">
-             Sita Sings the Blues
+             Step Up 3D
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
